# Learning-Management-System

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
lms_app/: hooks.py  modules.txt  tasks_py
lms_app/config/: desktop.py  docs.py
lms_app/lmsapp/dashboard_chart/active_course/: active_course.json
lms_app/lmsapp/dashboard_chart/assessments/: assessments.json
lms_app/lmsapp/dashboard_chart/enrollment_student/: enrollment_student.json
lms_app/lmsapp/doctype/assessment_enrollments/: assessment_enrollments.js  assessment_enrollments.json  assessment_enrollments.py  test_assessment_enrollments.py
lms_app/lmsapp/doctype/assessments/: assessments.js  assessments.json  assessments.py  test_assessments.py
lms_app/lmsapp/doctype/course_assessment/: course_assessment.js  course_assessment.json  course_assessment.py  test_course_assessment.py
lms_app/lmsapp/doctype/grading_criteria/: grading_criteria.json  grading_criteria.py
lms_app/lmsapp/doctype/students/: students.js  students.json  students.py  test_students.py
lms_app/lmsapp/lmsapp_dashboard/lms/: lms.json
lms_app/lmsapp/notification/enrollment_student/: enrollment_student.json  enrollment_student.md
